# cthyb

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE.txt  README.md  README.txt  README_DEVELOPERS  analysis.py  cthybvars.sh.in  license.txt  requirements.txt
c++/: CMakeLists.txt  OpCount.ipynb  README  README.txt  TODOLIST  array_suppl.hpp  atom_diag.cpp  atom_diag.hpp  atom_diag_functions.cpp  atom_diag_functions.hpp  atom_diag_worker.cpp  atom_diag_worker.hpp  atomic_correlators_worker.checks.cpp  atomic_correlators_worker.cpp  atomic_correlators_worker.hpp  complete_hilbert_space.hpp  config.hpp  config.hpp.in  configuration.cpp  configuration.hpp  container_set.hpp  ctqmc.cpp  ctqmc.hpp  ctqmc_krylov.cpp  ctqmc_krylov.hpp  ctqmc_matrix.cpp  ctqmc_matrix.hpp  exp_h_worker.hpp  fock_state.hpp  fundamental_operator_set.hpp  gf_block_structure.cpp  gf_block_structure.hpp  hilbert_space.hpp  imperative_operator.hpp  impurity_trace.checks.cpp  impurity_trace.cpp  impurity_trace.hpp  krylov_worker.hpp  measure_average_sign.cpp  measure_average_sign.hpp  (+47 more)
c++/measures/: G2_iw.cpp  G2_iw.hpp  G2_iwll.cpp  G2_iwll.hpp  G2_tau.cpp  G2_tau.hpp  G_l.cpp  G_l.hpp  G_tau.cpp  G_tau.hpp  average_sign.cpp  average_sign.hpp  density_matrix.cpp  density_matrix.hpp  g.cpp  g.hpp  g2.hpp  g2_inu.cpp  g2_legendre.cpp  g2_tau.cpp  g2_tau.hpp  g2_tau_block.cpp  g2_tau_block.hpp  g4_iw.cpp  g4_iw.hpp  g4_l.cpp  g4_l.hpp  g4_tau.cpp  g4_tau.hpp  g_l.hpp  g_legendre.cpp  g_legendre.hpp  g_tau.hpp  g_tau_block.hpp  perturbation_hist.hpp  util.hpp
c++/moves/: double_insert.cpp  double_insert.hpp  double_remove.cpp  double_remove.hpp  global.cpp  global.hpp  insert.cpp  insert.hpp  remove.cpp  remove.hpp  shift.cpp  shift.hpp
c++/old/: atomic_correlators_worker.v1.cpp  compute_z  configuration_with_mvbs.cpp  exp_h_worker.hpp  measure_boundary_state.hpp  measure_path_analysis.hpp  move_change_boundary_state.hpp  tree_dead_code
c++/triqs/: CMakeLists.txt  many_body_operator.hpp
c++/triqs_cthyb/: CMakeLists.txt  array_suppl.hpp  config.hpp  configuration.hpp  container_set.cpp  container_set.hpp  h5_config.hpp  impurity_trace.checks.cpp  impurity_trace.cpp  impurity_trace.hpp  parameters.cpp  parameters.hpp  qmc_data.hpp  solver_core.cpp  solver_core.hpp  toto.cpp  toto.hpp  types.hpp
doc/: CMakeLists.txt  ChangeLog.md  about.rst  algorithm.rst  benchmarks.rst  changelog.rst  conf.py.in  contents.rst  cthyb.bib  ctqmc3.bib  documentation.rst  faqs.rst  future_work.rst  implementation_details.rst  implementation_notes.rst  index.rst  install.rst  introduction.rst  issues.rst  krylov.rst  matrix.rst  operators.rst  sorted_spaces.rst  space_partition.rst  user_manual.rst
doc/_templates/: sideb.html
doc/basicnotions/: concept.rst  cthyb.rst  ctqmc3.bib  legendre.bib  lewin_thesis.bib  measurements.rst
doc/guide/: aim.py  aim.rst  aim_plot.py  aim_solution.h5  cthyb_convergence_tests.ipynb  density_matrix_example.h5  dmft.py  dmft.rst  dmft_plot.py  dmft_solution.h5  dynamic_susceptibility_notebook.ipynb  high_freq_moments.ipynb  legendre_plot.py  multiplet_analysis_notebook.ipynb  perturbation_order_notebook.ipynb  random.rst  settingparameters.rst  several_random.py  slater_five_band.h5  slater_five_band.py  slater_five_band.rst  slater_five_band_plot.py  static.py  static.rst  static_observables_notebook.ipynb
doc/notes/: .gitignore  measure_g2.tex
doc/reference/: constr_parameters.rst  measurements.rst  moves.rst  multiplet.rst  observables.rst  parameters.rst  parameters_constr_parameters_t.rst  parameters_solve_parameters_t.rst  solve_parameters.rst  solver.rst  utils.rst
python/: CMakeLists.txt  __init__.py  converters.hxx  cthyb.pyx  cthyb_converters.hxx  cthyb_desc.py  cthyb_krylov.pyx  cthyb_matrix.pyx  cthyb_parameters.rst  cthyb_solver.py  ctqmc_hyb_krylov.pyx  ctseg_solver.pyx  many_body_operator.pxd  many_body_operator.pyx  parameters.rst  util.py  version.py.in
python/cthyb/: CMakeLists.txt  __init__.py  config.py  parameters_solve_parameters_t.rst  solver.py  solver_core_desc.py  tail_fit.py
python/triqs_cthyb/: CMakeLists.txt  __init__.py  config.py  multiplet_tools.py  parameters_constr_parameters_t.rst  parameters_solve_parameters_t.rst  solver.py  solver_core.cpp  solver_core_desc.py  tail_fit.py  toto_module_desc.py  util.py  version.py.in
share/: CMakeLists.txt  triqs_cthyb.modulefile.in  triqs_cthybvars.sh.in
share/cmake/: CMakeLists.txt  triqs_cthyb-config-version.cmake.in  triqs_cthyb-config.cmake.in
test/c++/: CMakeLists.txt  G2.cpp  G2.ref.h5  anderson.cpp  anderson.output.h5  anderson.ref.h5  anderson_block.cpp  anderson_block.output.h5  anderson_block.ref.h5  anderson_block_qn.cpp  anderson_block_qn.output.h5  anderson_block_qn.ref.h5  anderson_new.cpp  anderson_qn.cpp  anderson_qn.output.h5  anderson_qn.ref.h5  atomic_gf.cpp  atomic_gf.output.h5  atomic_gf.ref.h5  co_on_cu_test.cpp.bak  co_on_cu_test.output.h5  g4.cpp  g4.ref.h5  h_diag_test.cpp  h_diag_test.ref  hilbert_test.cpp  hilbert_test.output  impurity_trace.cpp  impurity_trace_atomic_gf.cpp  impurity_trace_bug_try_insert.cpp  impurity_trace_op_insert.cpp  kanamori.cpp  kanamori.output.h5  kanamori.ref.h5  kanamori_offdiag.cpp  kanamori_offdiag.output.h5  kanamori_offdiag.ref.h5  kanamori_offdiag_qn.cpp  kanamori_offdiag_qn.output.h5  kanamori_offdiag_qn.ref.h5  (+31 more)
test/python/: 1eIn5Bands_b10.py  1eIn5Bands_b100.py  5eIn5Bands.py  5eIn5Bands_b10.py  5eIn5Bands_b100.py  CMakeLists.txt  O_tau_ins.py  O_tau_ins.ref.h5  Toto.py  U_matrix.py  atomdiag_ed.bench.h5  atomdiag_ed.py  atomdiag_ed.ref.h5  atomic_gf_complex.py  atomic_observables.output  atomic_observables.py  atomic_observables.ref  chain.py  complex_Gtau_ED.bench.h5  complex_Gtau_ED.py  complex_Gtau_ED.ref.h5  complex_bug81.py  h5_read_write.py  h5_read_write_more.py  hermitian_density_matrix.py  high_freq_tail.py  histograms.py  histograms.ref.h5  kanamori.output.h5  (+40 more)
tools/: CMakeLists.txt  analysis.hpp  analyze_static_ops.cpp  analyze_static_ops.v1.cpp  test.cpp
(+292 files in other folders)
